syntax = "proto3";

import "google/protobuf/wrappers.proto";

option go_package = "productinfo/proto";
option java_multiple_files = true;
option java_package = "pai.examples.ecommerce";
option java_outer_classname = "ecommerce";

service ProductInfo {
    rpc addProduct(Product) returns (google.protobuf.StringValue);
    rpc getProduct(google.protobuf.StringValue) returns (Product);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}
